# CMath

./: CMakeLists.txt  README.md
include/: cmath.h
src/: CMakeLists.txt  cmath.c
tests/: CMakeLists.txt  matrix.c  vector.c
